# alpha-RACE

./: README.md  foxglove_multi_car.json  index.html  requirements.txt
SimulationPackage_v2.1/: Dockerfile  docker-compose_sut_te_bridge_foxglove.yml  iac-layout-basic.json  open_foxglove.sh  run_vehicle_sim.sh  shutdown_sim.sh
SimulationPackage_v2.1/SIMPHERA/: Create_SUT_SIMPHERA.py  list_images.ps1
SimulationPackage_v2.1/ctun-23.1.0/: README.css  README.html
SimulationPackage_v2.1/gt_controller/: controller.py  mpc_controller.py  remapped_controller.launch.py  utils.py
SimulationPackage_v2.1/uva-stack/sample_controller/ros_ws/src/npc_controller/: CMakeLists.txt  package.xml
SimulationPackage_v2.1/uva-stack/sample_controller/ros_ws/src/npc_controller/config/: auto_tms.param.yaml  ims.param.yaml
SimulationPackage_v2.1/uva-stack/sample_controller/ros_ws/src/npc_controller/include/npc_controller/: dbw_state_machine.hpp  file_utils.hpp  filter.hpp  lap_state_machine.hpp  npc_controller.hpp  rc_states.hpp
SimulationPackage_v2.1/uva-stack/sample_controller/ros_ws/src/npc_controller/launch/: autoverse.launch.py  dspace.launch.py
SimulationPackage_v2.1/uva-stack/sample_controller/ros_ws/src/npc_controller/maps/auto-tms/: center_line.csv  inner_bound.csv  optimal.csv  optimal_line.csv  outer_bound.csv  pit_lane.csv
SimulationPackage_v2.1/uva-stack/sample_controller/ros_ws/src/npc_controller/maps/ims/: center_line.csv  center_line_.csv  fill_deviations.py  left_line.csv  optimal_line.csv  optimal_line_.csv  right_line.csv
SimulationPackage_v2.1/uva-stack/sample_controller/ros_ws/src/npc_controller/maps/ims_road/: center_line.csv  left_line.csv  optimal_line.csv  right_line.csv
SimulationPackage_v2.1/uva-stack/sample_controller/ros_ws/src/npc_controller/maps/lvms/: center_line.csv  inner_bound.csv  optimal.csv  outer_bound.csv  pitlane_center.csv
SimulationPackage_v2.1/uva-stack/sample_controller/ros_ws/src/npc_controller/scripts/: IMS.csv  IMS_inner.csv  IMS_outer.csv  IMS_pit_through.csv  lap_state_locs.ipynb  pit_lane.csv  process_IMS.ipynb
SimulationPackage_v2.1/uva-stack/sample_controller/ros_ws/src/npc_controller/src/: controller.py  mpc_controller.py  npc_controller.cpp
car_dynamics/: setup.py
car_ros2/car_ros2/: collect_data.bash  create_smiley_video.py  create_teaser_data.py  merge_data.py  model_arch.py  multi_car_blocking.py  multi_car_comp_blocking.py  plot_teaser_data.py  rerun_races.py  smiley_transition.avi  train_p_model_multi_dist.py  train_q_model_multi.py  train_q_model_multi_rel.py  trained_p_model_analysis.py
ref_trajs/: berlin_2018_raceline_with_speeds.csv  berlin_2018_raceline_with_speeds1.csv  fill_deviations.py
ros2_ws/: car.urdf
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/log/: latest_build
ros2_ws/src/my_robot_description/: CMakeLists.txt  package.xml
ros2_ws/src/my_robot_description/launch/: display.launch.py  display1.launch.py
ros2_ws/src/my_robot_description/urdf/: car2.urdf
simulators/: rerun_unity.py
simulators/env-v0_Data/: globalgamemanagers  level0  (+1 more)
(+3155 files in other folders)
